# ChangeLog for net-dialup/ppp
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/ppp/ChangeLog,v 1.146 2006/06/13 08:59:18 uberlord Exp $

  13 Jun 2006; <uberlord@gentoo.org> ppp-2.4.2-r15.ebuild,
  ppp-2.4.3-r15.ebuild:
  Change update-modules to modules-update.

  23 May 2006; Alin Nastac <mrness@gentoo.org> -ppp-2.4.3-r14.ebuild,
  ppp-2.4.3-r15.ebuild:
  Remove old test version. Take advantage of the new features implemented in
  linux-info.eclass (#133026).

  16 May 2006; Alin Nastac <mrness@gentoo.org> ppp-2.4.2-r15.ebuild:
  Fix recursive definitions of COPTS make variable (#133309).

  15 May 2006; Alin Nastac <mrness@gentoo.org> ppp-2.4.2-r15.ebuild:
  Fix build error on systems where libcrypt is not installed in /usr/lib
  (#133309).

*ppp-2.4.3-r15 (07 May 2006)

  07 May 2006; Alin Nastac <mrness@gentoo.org> -ppp-2.4.2-r10.ebuild,
  +ppp-2.4.3-r15.ebuild:
  Remove old revision. Fix makefiles wrt CFLAGS and LDFLAGS used by the user
  (#132115). Extend kernel configuration tests performed in pkg_postinst
  function.

  03 May 2006; Torsten Veller <tove@gentoo.org> ppp-2.4.3-r14.ebuild:
  Cross-compile fix for
  <http://article.gmane.org/gmane.linux.gentoo.embedded/588>

  24 Apr 2006; Joshua Kinard <kumba@gentoo.org> ppp-2.4.2-r15.ebuild:
  Marked stable on mips.

*ppp-2.4.3-r14 (09 Apr 2006)

  09 Apr 2006; Alin Nastac <mrness@gentoo.org> -ppp-2.4.3-r13.ebuild,
  +ppp-2.4.3-r14.ebuild:
  Modprobe pppoatm silently in pppoatm plugin, for avoiding the annoyance of a
  bogus error when PPPoA support is compiled into the kernel (#129282).

*ppp-2.4.3-r13 (23 Mar 2006)

  23 Mar 2006; Alin Nastac <mrness@gentoo.org> files/ip-down.baselayout,
  -ppp-2.4.3-r12.ebuild, +ppp-2.4.3-r13.ebuild:
  Fix typo in ip-down script (#127339).

*ppp-2.4.3-r12 (20 Mar 2006)

  20 Mar 2006; Alin Nastac <mrness@gentoo.org> files/ip-down.baselayout,