@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX README.mpls 530 RMD160 4814f25fa3d788311f37045188cf285fb588da67 SHA1 fdf4abff10b2593ca9012429cf684243cc74fec6 SHA256 5ef99aba902533fe9d17b7dfaf91e72b638cc70b9f811d1e518822ee80b5ff57
 MD5 1fd88dda7f4996799c69a9501d42cc23 files/README.mpls 530
 RMD160 4814f25fa3d788311f37045188cf285fb588da67 files/README.mpls 530
@@ -62,12 +65,13 @@ AUX pppoe.html 7605 RMD160 e149a0dbac8a0ac32c02e1a4ad617572b1effbce SHA1 fd321cb
 MD5 f0ad3e0c62aec1771536caf00e28b9c6 files/pppoe.html 7605
 RMD160 e149a0dbac8a0ac32c02e1a4ad617572b1effbce files/pppoe.html 7605
 SHA256 88561486051134e35b20f9d64259854434c96cd9944c041b9779dc090511271a files/pppoe.html 7605
-DIST ppp-2.4.2-mppe-mppc-1.1.patch.gz 12532
-DIST ppp-2.4.2-patches-20060516.tar.gz 13311
-DIST ppp-2.4.2.tar.gz 774441
+DIST ppp-2.4.2-mppe-mppc-1.1.patch.gz 12532 RMD160 0c8b72528cc7828888702d81ebafa92f5f3d653e SHA1 e481dfcb9f0e0297459320495f827134bd3ba106 SHA256 e9fac630069ff1843f36ed222b3348c3a996711e6b00411aeaee7882d7e33eee
+DIST ppp-2.4.2-patches-20060516.tar.gz 13311 RMD160 163c89891cb46a8ed70720904c9861e72ff0abee SHA1 d96a251f78ab5ecad6ae6ec6620a578d51b165ce SHA256 9604cd6bafa6ee3321b0c0b6211d6d86963979cdbc6411eca0b87bc8daa544da
+DIST ppp-2.4.2.tar.gz 774441 RMD160 49a3871cb2e20e749201962df31017203603eaa5 SHA1 fc58efe96e3b8af281695d1e3a3d0c2176e8c0b7 SHA256 b54984548fd6ef47abd7f8f2d97d4c6660690b6e0e35fb30b99ef6d3cd62d35a
 DIST ppp-2.4.3-patches-20060507.tar.gz 56282 RMD160 a16180232a6dabc9e3c00af7a473576d864928d5 SHA1 8ea760f913fd6f0a535b096bdac83a078d99c4d6 SHA256 09c6103316ea5daad0ffaf6bfdefe62131a108ec071fd071e94df316ca2821f9
+DIST ppp-2.4.3-patches-20060707.tar.gz 56533 RMD160 8f1d1fc00cb304b9cadbd0a17234c7456d67f919 SHA1 18f739f0cc05b395ae4bfe024d598e80e1b2288d SHA256 80f45fa9268eec6361600cec32a647d2e89ff12b230f6b384dca09a1cc9ab9bb
 DIST ppp-2.4.3.tar.gz 688092 RMD160 845821496bacb07d93bb7572a171854853ef722b SHA1 5e2789f4dedc81943fa9f94c840cccc2407056f7 SHA256 1e0fddb5f53613dd14ab10b25435e88092fed1eff09b4ac4448d5be01f3b0b11
-DIST ppp-dhcpc.tgz 33497
+DIST ppp-dhcpc.tgz 33497 RMD160 63bf0d1cc52e91ea536fc593fb7a40502baecd90 SHA1 1a0b02788d522f2137d0b66c749ffe6c96cceb94 SHA256 977fd980bb1d285963d8e27a87b7601ea84317faadfdb40989b258d1853db644
 EBUILD ppp-2.4.2-r15.ebuild 7796 RMD160 9cb79041d388bd8367f034fb9c573926da96d0fe SHA1 cdf34f2e252779ba3b4cc24642feaa563bb3420c SHA256 ef99af8f4ce2f89b8a98442283e993f89e82a70e3f81d6bed925f1fb56edc80f
 MD5 7de81d12c980e70d16eb82f4ee1ca3f0 ppp-2.4.2-r15.ebuild 7796
 RMD160 9cb79041d388bd8367f034fb9c573926da96d0fe ppp-2.4.2-r15.ebuild 7796
@@ -76,17 +80,31 @@ EBUILD ppp-2.4.3-r15.ebuild 11515 RMD160 5618777281b889925f651d06c002b59b5741e05
 MD5 921c4dfa8459359ece0710a437219679 ppp-2.4.3-r15.ebuild 11515
 RMD160 5618777281b889925f651d06c002b59b5741e054 ppp-2.4.3-r15.ebuild 11515
 SHA256 7f914b5485d23584d21c137fd4f61046cbc3ef8514ab1892ba4a41112d84cc9e ppp-2.4.3-r15.ebuild 11515
-MISC ChangeLog 26296 RMD160 8ad62258a91f5b1f5f99bbb1d5485d2dae1462af SHA1 07fe589993181b3ed3ae351fa03dd5e7c596da98 SHA256 f1bdefb3db251dfbf22f0ce9af35758fb6b33da1bf2957a527e24577e2c0aabf
-MD5 415b461bc6ead325259b446f2052ac99 ChangeLog 26296
-RMD160 8ad62258a91f5b1f5f99bbb1d5485d2dae1462af ChangeLog 26296
-SHA256 f1bdefb3db251dfbf22f0ce9af35758fb6b33da1bf2957a527e24577e2c0aabf ChangeLog 26296
+EBUILD ppp-2.4.3-r16.ebuild 11565 RMD160 03cdf8d92d61861f84fbbec13a6ba79caec767aa SHA1 a59a64681ca2bdd2200c8b5d66f783f26cc29f14 SHA256 92af928277c715421620fe746a424969a78ef04af8b8badd6adb76ff0c8a675d
+MD5 20d65726e6776de359578cbc32ba6d2b ppp-2.4.3-r16.ebuild 11565
+RMD160 03cdf8d92d61861f84fbbec13a6ba79caec767aa ppp-2.4.3-r16.ebuild 11565
+SHA256 92af928277c715421620fe746a424969a78ef04af8b8badd6adb76ff0c8a675d ppp-2.4.3-r16.ebuild 11565
+MISC ChangeLog 26441 RMD160 e61b6eeb11c87b0fc89d5d15b91002fe59316df8 SHA1 f11153f4dcc375885d58a2647b213b7663390512 SHA256 bbeb37a36e7bc8150fbcab92134e34df3dd0134a8d1ab395cf7a60a6e934f826
+MD5 bf87cd35dc0064b7d03f5a690e9185f3 ChangeLog 26441
+RMD160 e61b6eeb11c87b0fc89d5d15b91002fe59316df8 ChangeLog 26441
+SHA256 bbeb37a36e7bc8150fbcab92134e34df3dd0134a8d1ab395cf7a60a6e934f826 ChangeLog 26441
 MISC metadata.xml 295 RMD160 1bad3fb153298ef71f80807b3d2c5563433d3408 SHA1 da321dbde1a7f7f27c13ba47469de83e05dca6fe SHA256 eb07bc1d97ef7ec44448d40ae2f081b2db28a03bb4e612b850d0cb4acbdc29a1
 MD5 e6fdfdc4317d7fe324c50bd0477ca3f8 metadata.xml 295
 RMD160 1bad3fb153298ef71f80807b3d2c5563433d3408 metadata.xml 295
 SHA256 eb07bc1d97ef7ec44448d40ae2f081b2db28a03bb4e612b850d0cb4acbdc29a1 metadata.xml 295
-MD5 8655ab40bfaab82ff96de0e7e63ef4d4 files/digest-ppp-2.4.2-r15 271
-RMD160 b41ba65efe6f8b8c4bf9436747c4b32aff04f16e files/digest-ppp-2.4.2-r15 271
-SHA256 e5b856f029b90f5785d6e7303324592bb3e4f9e8ee5f7987fb2ab7d874195ec6 files/digest-ppp-2.4.2-r15 271
-MD5 fe5e57cadb803a33c6476462d04b5971 files/digest-ppp-2.4.3-r15 563
-RMD160 d44a6b61aec9489d0ece52f967f49b5ce476e384 files/digest-ppp-2.4.3-r15 563
-SHA256 0716322ff42fcad4d56b850773722d9ada11db5a5a7903b68ee22fb8b5f5ef91 files/digest-ppp-2.4.3-r15 563
+MD5 60e5d939fbd99b3e6e8f2e8eeebc8ddb files/digest-ppp-2.4.2-r15 997
+RMD160 cd5830afe9107524db43c2696090939142665f7e files/digest-ppp-2.4.2-r15 997
+SHA256 aca7fd4bee6f1aebfd83a7e17c47af1f751c00cc0cd51b5c0cddc5ee36b4b935 files/digest-ppp-2.4.2-r15 997
+MD5 1bd86440bb1b7479b72a8c0440cf32dc files/digest-ppp-2.4.3-r15 723
+RMD160 57087c83f2f386bdb32382ff810436761e8791ce files/digest-ppp-2.4.3-r15 723
+SHA256 8bfb1e5cda8235ac4555281a3a99e50dfb1126c41823aae2ad7eec7c588ef89e files/digest-ppp-2.4.3-r15 723
+MD5 fda919e05fe07632df11f5e5e6070b3c files/digest-ppp-2.4.3-r16 723
+RMD160 212ff730ca1ac5d98e4ddaa8d1577374a7db8d56 files/digest-ppp-2.4.3-r16 723
+SHA256 4c31a847a40f2cce88932457569ca331d4a9d1fc93711f0048e76681d01b9a40 files/digest-ppp-2.4.3-r16 723
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.3 (GNU/Linux)
+
+iD8DBQFErhPv3sf9c6kjmR8RAsR7AKC7JUccS/rlBpvaz2TTQ1WxKjp/zQCfT/F8
+hiQ5TlHdvPmVagP7M0MTNVU=
+=GNdJ
+-----END PGP SIGNATURE-----
