@@ -1,4 +1,12 @@
 MD5 0d2679907627f68dd6a2c32d1c7dda90 ppp-2.4.2-mppe-mppc-1.1.patch.gz 12532
+RMD160 0c8b72528cc7828888702d81ebafa92f5f3d653e ppp-2.4.2-mppe-mppc-1.1.patch.gz 12532
+SHA256 e9fac630069ff1843f36ed222b3348c3a996711e6b00411aeaee7882d7e33eee ppp-2.4.2-mppe-mppc-1.1.patch.gz 12532
 MD5 f8ea52da2dd3e7f11a4bcede9fec17c8 ppp-2.4.2-patches-20060516.tar.gz 13311
+RMD160 163c89891cb46a8ed70720904c9861e72ff0abee ppp-2.4.2-patches-20060516.tar.gz 13311
+SHA256 9604cd6bafa6ee3321b0c0b6211d6d86963979cdbc6411eca0b87bc8daa544da ppp-2.4.2-patches-20060516.tar.gz 13311
 MD5 362bcf218fba8afbb9afbee7471e5dac ppp-2.4.2.tar.gz 774441
+RMD160 49a3871cb2e20e749201962df31017203603eaa5 ppp-2.4.2.tar.gz 774441
+SHA256 b54984548fd6ef47abd7f8f2d97d4c6660690b6e0e35fb30b99ef6d3cd62d35a ppp-2.4.2.tar.gz 774441
 MD5 9d2f3febf510c5b0cbb4dacba713a217 ppp-dhcpc.tgz 33497
+RMD160 63bf0d1cc52e91ea536fc593fb7a40502baecd90 ppp-dhcpc.tgz 33497
+SHA256 977fd980bb1d285963d8e27a87b7601ea84317faadfdb40989b258d1853db644 ppp-dhcpc.tgz 33497
