@@ -1,6 +1,6 @@
-MD5 1a0cc3c75ea7d63af62c14f3d9bf3c17 ppp-2.4.3-patches-20060507.tar.gz 56282
-RMD160 a16180232a6dabc9e3c00af7a473576d864928d5 ppp-2.4.3-patches-20060507.tar.gz 56282
-SHA256 09c6103316ea5daad0ffaf6bfdefe62131a108ec071fd071e94df316ca2821f9 ppp-2.4.3-patches-20060507.tar.gz 56282
+MD5 fa95166a95283db0909e80111017bb7f ppp-2.4.3-patches-20060707.tar.gz 56533
+RMD160 8f1d1fc00cb304b9cadbd0a17234c7456d67f919 ppp-2.4.3-patches-20060707.tar.gz 56533
+SHA256 80f45fa9268eec6361600cec32a647d2e89ff12b230f6b384dca09a1cc9ab9bb ppp-2.4.3-patches-20060707.tar.gz 56533
 MD5 848f6c3cafeb6074ffeb293c3af79b7c ppp-2.4.3.tar.gz 688092
 RMD160 845821496bacb07d93bb7572a171854853ef722b ppp-2.4.3.tar.gz 688092
 SHA256 1e0fddb5f53613dd14ab10b25435e88092fed1eff09b4ac4448d5be01f3b0b11 ppp-2.4.3.tar.gz 688092
