@@ -1,6 +1,11 @@
 # ChangeLog for net-dialup/ppp
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/ppp/ChangeLog,v 1.146 2006/06/13 08:59:18 uberlord Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/ppp/ChangeLog,v 1.147 2006/07/07 07:56:44 mrness Exp $
+
+*ppp-2.4.3-r16 (07 Jul 2006)
+
+  07 Jul 2006; Alin Nastac <mrness@gentoo.org> +ppp-2.4.3-r16.ebuild:
+  Fix local privilege escaladation (#139477).
 
   13 Jun 2006; <uberlord@gentoo.org> ppp-2.4.2-r15.ebuild,
   ppp-2.4.3-r15.ebuild:
